# PhotonSpaceShooterGame

Assets/levels/: defaultscene.cry.cryasset  models.cry.cryasset  scene1.cry.cryasset  test.cry.cryasset
Assets/levels/defaultscene/: defaultscene.bak2  defaultscene.cry  filelist.xml  level.pak
Assets/levels/defaultscene/Layers/: main.lyr
Assets/levels/defaultscene/leveldata/: Environment.bak2  Environment.xml  Heightmap.bak2  Objectives.xml  TimeOfDay.xml
Assets/levels/models/: filelist.xml  level.pak  models.bak2  models.cry
Assets/levels/models/Layers/: Main.bak2  main.lyr
Assets/levels/models/leveldata/: Environment.bak2  Environment.xml  Heightmap.bak2
Assets/levels/scene1/: filelist.xml  level.pak  scene1.cry
Assets/levels/scene1/Layers/: main.lyr
Assets/levels/scene1/leveldata/: Objectives.xml  TimeOfDay.xml
Assets/levels/test/: filelist.xml  level.pak  test.bak2  test.cry
Assets/levels/test/Layers/: Main.bak2  main.lyr
Assets/levels/test/leveldata/: Environment.xml  Heightmap.bak2  TimeOfDay.xml
Assets/libs/environmentpresets/: defaultscene.xml  defaultscene.xml.cryasset  scene1.xml.cryasset  test.xml.cryasset
Assets/objects/: test.cgf
Assets/objects/bullet/: bullet.cgf  bullet.mtl  bullet.mtl.cryasset
Assets/objects/testobjects/: SF_Corvette-F3.cgf  SF_Corvette-F3.cgf.cryasset  SF_Free-Fighter.cgf  SF_Free-Fighter.cgf.cryasset  sf_corvette-f3.mtl  sf_corvette-f3.mtl.cryasset  sf_corvette-f3_diffuse.dds  sf_corvette-f3_diffuse.dds.cryasset  sf_corvette-f3_glow.dds  sf_corvette-f3_glow.dds.cryasset  sf_corvette-f3_normal.dds  sf_corvette-f3_normal.dds.cryasset  sf_corvette-f3_specular.dds  sf_corvette-f3_specular.dds.cryasset  sf_fighter-albedo.dds  sf_fighter-albedo.dds.cryasset  sf_fighter-gloss.dds  sf_fighter-gloss.dds.cryasset  sf_fighter-glow.dds  sf_fighter-glow.dds.cryasset  sf_fighter-normal.dds  sf_fighter-normal.dds.cryasset  sf_fighter-specular.dds  sf_fighter-specular.dds.cryasset  sf_free-fighter.mtl  sf_free-fighter.mtl.cryasset  spacefighter_spacefightermain_albedotransparency.dds.cryasset  test.cgf  test.cgf.cryasset
Assets/particles/: sparks.pfx  sparks.pfx.cryasset  stars.pfx  stars.pfx.cryasset  test.pfx  test.pfx.cryasset
Code/: CMakeLists.txt  GamePlugin.cpp  GamePlugin.h
Code/Components/: Bullet.cpp  Bullet.h  Player.cpp  Player.h  Ship.cpp  Ship.h  ShipPropulsion.cpp  ShipPropulsion.h  TestEntity.cpp  TestEntity.h  Weapon.cpp  Weapon.h
Code/Components/Photon/: IPhotonCommon.h  PhotonClientComponent.cpp  PhotonClientComponent.h  PhotonComponent.cpp  PhotonComponent.h  PhotonEntityComponent.cpp  PhotonEntityComponent.h
solutions/win64/libs/Photon/Chat-cpp/: Chat-cpp_vc15.vcxproj
solutions/win64/libs/Photon/Chat-cpp/inc/: Client.h
solutions/win64/libs/Photon/Chat-cpp/inc/Enums/: CustomAuthenticationType.h
solutions/win64/libs/Photon/Chat-cpp/src/: AuthenticationValues.cpp  Client.cpp
solutions/win64/libs/Photon/Chat-cpp/src/Internal/: AuthenticationValuesSecretSetter.cpp
solutions/win64/libs/Photon/Common-cpp/inc/: Dictionary.h  DictionaryBase.h  ValueObject.h  defines.h
solutions/win64/libs/Photon/Common-cpp/inc/Helpers/: ToStringImplementation.h
solutions/win64/libs/Photon/Common-cpp/inc/MemoryManagement/: Allocate.h  (+1 more)
solutions/win64/libs/Photon/LoadBalancing-cpp/: LoadBalancing-cpp_vc15.vcxproj
solutions/win64/libs/Photon/LoadBalancing-cpp/inc/: Client.h  FriendInfo.h  MutablePlayer.h  MutableRoom.h
solutions/win64/libs/Photon/LoadBalancing-cpp/src/: AuthenticationValues.cpp  Client.cpp  FriendInfo.cpp  MutablePlayer.cpp  MutableRoom.cpp  Peer.cpp  RaiseEventOptions.cpp  RoomOptions.cpp  WebFlags.cpp
solutions/win64/libs/Photon/Photon-cpp/inc/: PhotonListener.h
(+17 files in other folders)
